--- a/portfolio.html
+++ b/portfolio.html
@@ -4,8 +4,9 @@
     <title>First Web Page</title>
   </head>
   <body>
-    <h1>Hello World</h1>
-    This is my first HTML Page!
-    Retesting with new language
+    <h1>Jonathan Keusch</h1>
+    <h2>About Me</h2>
+    I work in technology and am working on developing a more technical background. I have worked on web apps throughout my career and am very interested in formalizing knowledge and 
+    web engineering experience. This is my sixth class at Tufts so I have some C++ experience and some Python experience from a previous Data Science bootcamp with General Assembly.
   </body>
 </html>
