--- a/portfolio.html
+++ b/portfolio.html
@@ -55,7 +55,7 @@
         <td> Harry Potter and the Half-Blood Prince </td>
         <td> <img src="https://media.harrypotterfanzone.com/half-blood-prince-uk-childrens-edition-2014-700x0-c-default.jpg"> </td>
         <td> J.K. Rowling </td>
-        <td> Sixth installment of the Harry Potter series finds Harry preparing for the series finale while learning more about mentor Dubmledore and antagonist Tom Riddle's background 
+        <td> Sixth installment of the Harry Potter series finds Harry preparing for the series finale while learning more about mentor Dumbledore and antagonist Tom Riddle's background 
           and secret to seemingly eternal life </td>
        </tr>
        <tr>
