--- a/portfolio.html
+++ b/portfolio.html
@@ -7,6 +7,7 @@
     <h1>Jonathan Keusch</h1>
     <h2>About Me</h2>
     <p>
+      <a href="https://jmkeusch.github.io/cs120/portfolio.html">My GitHub page</a> <br>
       I work in technology and am working on developing a more technical background. I have worked on web apps throughout my career and am very interested in formalizing knowledge and 
       web engineering experience. This is my sixth class at Tufts so I have some C++ experience and some Python experience from a previous Data Science bootcamp with General Assembly.
     </p>
@@ -32,6 +33,10 @@
         with excellent flavor that will fill the house with rich aromas. It can be served over mashed potatoes or egg noodles and goes great with the wine you used in the stew!</p>
 <br>
 <br>
+    <br>
+    <br>
+    <br>
+    <br>
     <h2> Favorite Books </h2>
       <table>
       <tr>
