--- a/portfolio.html
+++ b/portfolio.html
@@ -8,6 +8,7 @@
     <h2>About Me</h2>
     <p>
       <a href="https://jmkeusch.github.io/cs120/portfolio.html">My GitHub page</a> <br>
+      <a href="https://my.siteground.com/"> SiteGround</a> <br>
       I work in technology and am working on developing a more technical background. I have worked on web apps throughout my career and am very interested in formalizing knowledge and 
       web engineering experience. This is my sixth class at Tufts so I have some C++ experience and some Python experience from a previous Data Science bootcamp with General Assembly.
     </p>
