Update and rename portfolio.html to about.html

--- a/about.html
+++ b/about.html
@@ -4,11 +4,11 @@
     <title>First Web Page</title>
   </head>
   <body>
-    <h1>Jonathan Keusch 2</h1>
+    <h1>Jonathan Keusch</h1>
     <h2>About Me</h2>
     <p>
       <a href="https://github.com/jmkeusch/cs120">My GitHub page</a> <br>
-      <a href="https://my.siteground.com/"> SiteGround</a> <br>
+      <a href="jonathank1.sgedu.site"> SiteGround</a> <br>
       I work in technology and am working on developing a more technical background. I have worked on web apps throughout my career and am very interested in formalizing knowledge and 
       web engineering experience. This is my sixth class at Tufts so I have some C++ experience and some Python experience from a previous Data Science bootcamp with General Assembly.
     </p>
